# pickban.win

./: .gitignore  Cargo.toml  riot.txt  upload.bash
data/na/summoner.2020-01-27T23-12-07.csv/: summoner.2020-01-27T23-12-07.csv
src/: main.rs  main_count_leagueids.rs  main_new.rs  main_old.rs  main_old2.rs  main_pagination.rs  model.rs
src/model/: league.rs  match.rs  mod.rs  summoner.rs
src/pipeline/: basic.rs  filter.rs  hybitset.rs  mapping_api.rs  mod.rs  source.rs  source_apex_tiers.rs  source_api.rs  source_fs.rs
src/util/: csv_find.rs  csvgz.rs  error.rs  file_find.rs  hybitset.rs  lol.rs  mod.rs  time.rs
