[package]
name = "pickbanwin"
version = "0.1.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
flate2 = "1.0"
riven = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
