[package]
name = "pickbanwin"
version = "0.1.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
chrono = "0.4"
clap = "2.29"
csv = "1.1"
flate2 = "1.0"
futures = "0.3"
glob = "0.3"
itertools = "0.8"
lazy_static = "1.4"
num_enum = "0.4"
riven = "1.0"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2.11", features = [ "macros", "rt-threaded", "fs", "io-util" ] }
